# llvm-kaleidoscope

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  TestRunner.cpp  TestRunner.h  Token.h  Types.h  ast.cpp  ast.h  comp_run.sh  comp_run_loop.sh  comp_test.sh  flake.nix  loc.sh  main.cpp  notes.md  output.ll  test.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1a5524byl2k39j17ddqyj55qd65180br-source  4fs75lk37ssknyq7m39hals581izzd3i-source
programs/: assignment.kld  assignment.ll  double.kld  double.ll  example.kld  example.ll  extern.kld  extern.ll  fibonacci.kld  fibonacci.ll  fn_calls.kld  fn_calls.ll  for_loop.kld  for_loop.ll  if_else.kld  if_else.ll  let_statement.kld  let_statement.ll  main.asn  main.kld  main.ll  precedence.kld  precedence.ll  string.kld  string.ll  sum.kld  sum.ll  test.kld  test.ll
